--- a/TxTLauncher/app/src/main/AndroidManifest.xml
+++ b/TxTLauncher/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
         </activity>
 
